Add opencv-python in dockerfile

--- a/torchlambda/Dockerfile
+++ b/torchlambda/Dockerfile
@@ -8,6 +8,7 @@ RUN yum -y group install "Development Tools" && \
   yum -y install unzip git wget rh-python37 ninja-build cmake3 curl-devel \
   libcurl-devel libuuid-devel openssl-devel && \
   pip3 install --no-cache-dir pyyaml==5.3 && \
+  pip3 install opencv-python && \
   ln -s /usr/bin/ninja-build /usr/bin/ninja
 
 WORKDIR /home/app
